[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.1'
parking_lot = '0.7.1'
slog = '^2'
tokio = '0.1'
trie-root = '0.11.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.node-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'c4ca27f7121f37172ae0d2d92280a947ca77edd8'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[[bin]]
name = 'rust-bitopia'
path = 'src/main.rs'
