[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime-wasm'
version = '0.9.0'
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['node-template-runtime/std']

[workspace]
members = []
[dependencies.node-template-runtime]
default-features = false
path = '..'

[lib]
crate-type = ['cdylib']
